--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                   </a>
                 </span>
                 <span class="link-block">
-                  <a href="./CogACT_paper.pdf" class="external-link button is-normal is-rounded is-dark" target="_blank">
+                  <a href="https://arxiv.org/abs/2411.19650" class="external-link button is-normal is-rounded is-dark" target="_blank">
                     <span class="icon">
                       <i class="ai ai-arxiv"></i>
                     </span>
@@ -243,7 +243,7 @@
             module and demonstrate the strong performance enhancement with diffusion action transformers for action
             sequence modeling, as well as their favorable scaling behaviors. We also conduct comprehensive experiments
             and ablation studies to evaluate the efficacy of our models with varied designs. The evaluation on 4 robot
-            embodiments in simulation and real work shows that our model not only significantly surpasses existing VLAs
+            embodiments in simulation and real world shows that our model not only significantly surpasses existing VLAs
             in task performance but also exhibits remarkable adaptation to new robots and generalization to unseen
             objects and backgrounds. It exceeds the average success rates of OpenVLA which has a similar model size (7B)
             with ours by over 35% in simulated evaluation and 55% in real robot experiments. It also outperforms the
