--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@
 <code>@article{li2024cogact,
   title={CogACT: A Foundational Vision-Language-Action Model for Synergizing Cognition and Action in Robotic Manipulation},
   author={Qixiu, Li and Yaobo, Liang and Zeyu, Wang and Lin, Luo and Xi, Chen and Mozheng, Liao and Fangyun, Wei and Yu, Deng and Sicheng, Xu and Yizhong, Zhang and Xiaofan, Wang and Bei, Liu and Jianlong, Fu and Jianmin, Bao and Dong, Chen and Yuanchun, Shi and Jiaolong, Yang and Baining, Guo},
-  journal = {arXiv preprint},
+  journal = {arXiv preprint arXiv:2411.19650},
   year={2024},
 }  
   </code></pre>
