update raw video descriptions

--- a/index.html
+++ b/index.html
@@ -277,8 +277,9 @@
           </video>
         </div>
       </div>
-      <p class="has-text-centered">Pretrained on 0.4M trajectories from the Open X-Embodiment dataset, the CogACT-VLA model quickly adapts to a new robot and environment with a few hundred trajectories. <br />
-        It not only demonstrates significantly higher success rates than previous VLAs, but also exhibits remarkable object generalization capabilities and task robustness.
+	  
+      <p class="has-text-centered">Pretrained on 0.4M trajectories from the Open X-Embodiment dataset, the CogACT-VLA model quickly adapts to a new robot and environment with a few hundred trajectories.
+        It not only demonstrates significantly higher success rates than previous VLAs, but also exhibits remarkable object generalization capabilities and task robustness. <br><i>(All videos are played at 8x speed with static frames (waiting for human’s next instruction input) removed for better demonstration. Raw videos can be found <a href="https://github.com/CogACT/CogACT.github.io/tree/main/static/videos"  style="text-decoration: underline;" target="_blank"> here</a>.)</i> </p>
     </div>
   </section>
 
